2008-02-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.ThickClient/Banshee.Gui/SourceActions.cs: Add and
	comment out an implementation for 'New Smart Playlist From Search'.  It
	works, but the smart playlist Editor needs to be changed to accept
	conditions with no field (eg implying search-all-default-fields).

	* src/Core/Banshee.ThickClient/Resources/core-ui-actions-layout.xml:
	Comment out 'New Smart Playlist From Search' item.

2008-02-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Core/Banshee.Services/Banshee.Services.mdp:
	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.mdp:
	* src/Libraries/Lastfm.Gui/Lastfm.Gui.mdp:
	* src/Libraries/Lastfm/Lastfm.mdp:
	* src/Libraries/Mono.Media/Mono.Media.mdp: Fix MD build.

	* src/Extensions/Banshee.Lastfm/Makefile.am: Remove non-existant file.

2008-02-27  Alexander Hixon  <hixon.alexander@mediati.org>

	* src/Libraries/Lastfm/Lastfm/AudioscrobblerConnection.cs: Support lazy
	authentication. Also implement retrying if sending a 'Now Playing' track
	failed. Slightly more detailed logging is also added.

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
	Removed a useless boolean value. Also implemented lazy connecting before
	queuing tracks.

2008-02-27  Alexander Hixon  <hixon.alexander@mediati.org>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Audioscrobbler/AudioscrobblerService.cs:
	Only scrobble tracks if the 'Enable song reporting' checkbox is active.

2008-02-27  Gabriel Burt  <gabriel.burt@gmail.com>

	* src/Extensions/Banshee.Lastfm/Banshee.Lastfm.Radio/LastfmSourceContents.cs:
	Fix crasher - don't update GTK outside the main thread.

2008-02-26  Gabriel Burt  <gabriel.burt@gmail.com>

	This commit brings back a thread-safe database layer.  Unfortunately, that
	currently means switching back to the deprecated Mono.Data.SqliteClient
	library.  Mono.Data.Sqlite does not allow executing a command in one